--- a/templates/inc/best_tags_members.html
+++ b/templates/inc/best_tags_members.html
@@ -5,7 +5,7 @@
            {% include "inc/single_tag.html" %}
         {% endfor %}
     </div>
-    <div>
+    <div style="margin-top: 300px">
         <h2 class="members"> Best Members </h2>
         <ul class="members_list">
         {% for user in users %}
