--- a/templates/profile_edit.html
+++ b/templates/profile_edit.html
@@ -1,7 +1,21 @@
 {% extends 'inc/base.html' %}
 {% load static %}
+{% load bootstrap5 %}
 {% block content %}
 
 
+
+    <form action="{% url "profile_edit" %}" method="post" enctype="multipart/form-data">
+        <div class="form-group">
+            <p class="h1">Edit your profile:</p>
+            {% csrf_token %}
+            {% bootstrap_form form %}
+        </div>
+        <button type="submit" class="btn btn-primary">Save</button>
+    </form>
+
+    <div class="to_profile_link mt-5">
+        <a class="to_profile_link" href="{% url "profile" request.user.id %}"> To profile</a>
+    </div>
 
 {% endblock %}
