--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
 
             <h4 class="card-title mb-4 mt-1">Registration</h4>
             <small class="form-text text-muted">Quick registration will allow you to ask questions and answer other users</small>
-            <form action="/register/" method="post">
+            <form action="/register/" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     {% csrf_token %}
                    {% bootstrap_form form %}
